--- a/css/main.css
+++ b/css/main.css
@@ -1819,7 +1819,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #117877;
+  background: #09fff7;
 }
 .links-of-blogroll {
   font-size: 13px;
